# MALTopic-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/maltopic/: __init__.py  core.py  prompts.py  stats.py  utils.py
src/maltopic/gui/: __init__.py  __main__.py  app.py  state.py  styles.py
src/maltopic/gui/components/: config.py  data_upload.py  dedup.py  enrichment.py  results.py  sidebar.py  topics.py
src/maltopic/llms/: __init__.py  openai.py
tests/: __init__.py  test_batching.py  test_core.py  test_gui_app.py  test_gui_components.py  test_gui_entry.py  test_gui_state.py  test_openai.py  test_stats.py  test_stats_integration.py  test_utils.py
