[tool.poetry]
name = "maltopic"
version = "1.2.0"
description = "A multi-agent LLM topic modeling library."
authors = ["Yash Sharma <yash91sharma@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yash91sharma/MALTopic-py"
repository = "https://github.com/yash91sharma/MALTopic-py"
keywords = ["topic modeling", "LLM", "multi-agent", "survey analysis", "data enrichment", "topic deduplication", "semantic analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
packages = [{include = "maltopic", from = "src"}]
include = ["README.md", "LICENSE", "CHANGELOG.md"]


[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.79.0"
pandas = "^2.2.3"
tqdm = "^4.67.1"
tiktoken = "^0.9.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
